--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.3.3"
   },
   "dependencies": {
-    "ionicitude": "^1.0.1"
+    "ionicitude": "^1.0.1",
+    "angular-filter": "^0.5.16"
   }
 }
