--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.1.1",
     "description": "Learning: An Ionic project",
     "dependencies": {
+        "com.wikitude.phonegap.WikitudePlugin": "https://github.com/Wikitude/wikitude-cordova-plugin.git",
         "com.wikitude.phonegap.wikitudeplugin": "git+https://github.com/Wikitude/wikitude-cordova-plugin.git",
         "cordova-plugin-console": "1.0.5",
         "cordova-plugin-device": "1.1.4",
@@ -14,10 +15,12 @@
         "gulp-minify-css": "^0.3.0",
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^2.0.4",
-        "ionic-plugin-keyboard": "~2.2.1",
-        "com.wikitude.phonegap.WikitudePlugin": "https://github.com/Wikitude/wikitude-cordova-plugin.git"
+        "ionic-plugin-keyboard": "~2.2.1"
     },
     "devDependencies": {
+        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-gulp": "1.0.1",
+        "@ionic/cli-plugin-ionic1": "2.0.0",
         "bower": "^1.3.3",
         "gulp-util": "^2.2.14",
         "shelljs": "^0.3.0"
