--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "1.1.1",
     "description": "Learning: An Ionic project",
     "dependencies": {
+        "com.wikitude.phonegap.WikitudePlugin": "https://github.com/Wikitude/wikitude-cordova-plugin.git",
         "com.wikitude.phonegap.wikitudeplugin": "git+https://github.com/Wikitude/wikitude-cordova-plugin.git",
+        "cordova-android": "^6.2.3",
         "cordova-plugin-console": "1.0.5",
         "cordova-plugin-device": "1.1.4",
         "cordova-plugin-splashscreen": "~4.0.1",
@@ -14,8 +16,7 @@
         "gulp-minify-css": "^0.3.0",
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^2.0.4",
-        "ionic-plugin-keyboard": "~2.2.1",
-        "com.wikitude.phonegap.WikitudePlugin": "https://github.com/Wikitude/wikitude-cordova-plugin.git"
+        "ionic-plugin-keyboard": "~2.2.1"
     },
     "devDependencies": {
         "bower": "^1.3.3",
@@ -43,6 +44,9 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "com.wikitude.phonegap.WikitudePlugin": {}
-        }
+        },
+        "platforms": [
+            "android"
+        ]
     }
 }
