--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,4 +1,14 @@
 {
   "name": "Learning",
-  "app_id": ""
+  "app_id": "",
+  "type": "ionic1",
+  "integrations": {
+    "cordova": {}
+  },
+  "watchPatterns": [
+    "scss/**/*",
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
+  ]
 }
